Bug 1615897 - Blob URL should not ignore query parameter and revokeObjectURL additionally should not ignore fragments. r=baku

Differential Revision: https://phabricator.services.mozilla.com/D63939